2010-06-06  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14629: Copyright Year in Page Source is still wrong (Thanks to Jigal van Hemert)

2010-06-06  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14455: [Performance] Wrong variable in t3lib_cache_memcachedbackend leads to redundant data (Thanks to Dan Osipov)

2010-06-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14625: htmlArea RTE: Inconsistant position of ok button

2010-06-05  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14626: Login refresh popup should not display news
	* Followup to #14387: Remove the feature "Enable extensions without review (basic security check)" from EM (Thanks to Helmut Hummel)

2010-06-04  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14615: Autosuggest function doesn't work with quotes

2010-06-04  Susanne Moog  <typo3@susannemoog.de>

	* Fixed bug #13818: tcemain versionSwap might break pages_language_overlay relations (thanks to Tolleiv Nietsch)
	
2010-06-03  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14397: htmlArea RTE: Incorrect encoding of some labels when BE is not utf-8

2010-06-03  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14130: Switching pages with browsebox doesn't work (thanks to Mark Kuiphuis)

2010-06-02  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13506: [felogin] Function changePassword does not work, when hitting 'enter' in change password form (Thanks to Christian Futterlieb)

2010-05-31  Oliver Hader  <oliver@typo3.org>

	* Release of TYPO3 4.4.0beta3

2010-05-31  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #14556: Media content element shows HTML markup in additional flexform configuration

2010-05-31  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14527: fixPermissions() for ENABLE_INSTALL_TOOL and extension import
	* Fixed bug #13701: @ini_set() works only on windows, on some unices it could render the function unusable (Thanks to Stephan Seitz)

2010-05-31  Steffen Kamper  <info@sk-typo3.de>
